--- a/authorization-server/src/main/resources/templates/login.html
+++ b/authorization-server/src/main/resources/templates/login.html
@@ -4,13 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>登录</title>
+    <title>Hspace统一登录</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        html {
+            height: 100%;
+        }
+
+        body {
+            height: 100%;
+        }
+
+        .container {
+            height: 100%;
+            background-image: linear-gradient(to right, #a6c1ee, #4682B4);
+        }
+
+        .login-wrapper {
+            background-color: #fff;
+            width: 358px;
+            height: 588px;
+            border-radius: 15px;
+            padding: 0 50px;
+            position: relative;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        .header {
+            font-size: 38px;
+            font-weight: bold;
+            text-align: center;
+            line-height: 200px;
+        }
+
+        .input-item {
+            display: block;
+            width: 100%;
+            margin-bottom: 20px;
+            border: 0;
+            padding: 10px;
+            border-bottom: 1px solid rgb(128, 125, 125);
+            font-size: 15px;
+            outline: none;
+        }
+
+        .input-item:placeholder {
+            text-transform: uppercase;
+        }
+
+        .btn {
+            text-align: center;
+            padding: 10px;
+            width: 100%;
+            margin-top: 40px;
+            background-image: linear-gradient(to right, #4682B4, #a6c1ee);
+            border: #a6c1ee 0px;
+            color: #fff;
+        }
+
+    </style>
 </head>
 <body>
-<form method="post" action="/login">
-    用户名：<input name="username" type="text"/> <br/>
-    密码： <input name="password" type="password"> <br/>
-    <button type="submit">登录</button>
-</form>
+<div class="container">
+    <div class="login-wrapper">
+        <div class="header">统一登录</div>
+        <div class="form-wrapper">
+            <form method="post" action="/login">
+                <input class="input-item" placeholder="用户名" name="username" type="text"/> <br/>
+                <input class="input-item" placeholder="密码" name="password" type="password"> <br/>
+                <button type="submit" class="btn">登录</button>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
